app-a/ch23/app-stack/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: end-user
  labels:
    access: outside
---
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels:
    access: inside
---
kind: Pod
apiVersion: v1
metadata:
  name: frontend
  namespace: end-user
  labels:
    app: frontend
spec:
  containers:
  - name: busybox
    image: busybox:1.36.1
    command: ["sh", "-c", "sleep 1h"]
    - containerPort: 80
      protocol: TCP
---
kind: Pod
apiVersion: v1
metadata:
  name: backend
  namespace: internal
  labels:
    app: backend
spec:
  containers:
  - name: busybox
    image: busybox:1.36.1
    command: ["sh", "-c", "sleep 1h"]
    ports:
    - containerPort: 4423
      protocol: TCP
    - containerPort: 5660
      protocol: TCP
