app-a/ch23/app-stack/allow-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-stack
  namespace: end-user
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
      namespaceSelector:
        matchLabels:
          access: inside
    ports:
    - protocol: TCP
      port: 80
